<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/phone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnPlay"
                style="@style/ButtonMain"
                android:text="@string/play" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    android:layout_height="match_parent"
                    android:id="@+id/btnLeft"
                    style="@style/seekLevel"
                    android:layout_weight="5"
                    android:text="@string/left" />
                <TextView
                    android:id="@+id/tvLevel"
                    style="@style/seekLevel"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btnRight"
                    android:layout_height="match_parent"
                    style="@style/seekLevel"
                    android:layout_weight="5"
                    android:text="@string/right" />

            </LinearLayout>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/seekBarLevel"
                android:background="@color/ColorGroup"
                android:layout_margin="15dp"/>
            <TextView
                android:id="@+id/tvHints"
                style="@style/ButtonMain" />
            <Button
                android:id="@+id/btnHints"
                style="@style/ButtonMain"
                android:text="@string/_5_hints"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/btnExit"
                style="@style/ButtonMain"
                android:text="@string/exit" />

        </LinearLayout>
</LinearLayout>